--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,14 @@ db
 kvstore/FlexSync/valueLog_WiscKey.log
 kvstore/FlexSync/valueLog_Leveldb.log
 kvstore/FlexSync/db_key_index
+kvstore/FlexSync/dbfile
 kvstore/FlexSync/db_key_index_new
 kvstore/LevelDB/db_key_value
 kvstore/kvserver/db_key_index
 kvstore/kvserver/db_key_index_new
 raft/RaftState.log
 raft/RaftState_sorted.log
+raft/valuelog
 raft/RaftState_new.log
 run_server.sh
 run_client.sh
