--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ kvstore/kvserver/db_key_index
 kvstore/kvserver/db_key_index_new
 raft/RaftState.log
 raft/RaftState_sorted.log
+raft/originalKvs.log
 raft/valuelog
 raft/RaftState_new.log
 run_server.sh
