--- a/TLA+/KVS-Raft/KVSRaft.cfg
+++ b/TLA+/KVS-Raft/KVSRaft.cfg
@@ -14,22 +14,8 @@ CONSTANTS
 
 INVARIANT Safety
 
-\* 可选：检查单独的安全属性
-\* INVARIANT ElectionSafety
-\* INVARIANT LogMatching
-\* INVARIANT OffsetCorrectness
-\* INVARIANT ValueConsistency
-
 \* 状态约束：限制模型大小以提高验证效率
-CONSTRAINT 
-    \* 限制日志长度
-    /\ \A i \in Server : Len(log[i]) <= 4
-    \* 限制ValueLog长度
-    /\ \A i \in Server : Len(valueLog[i]) <= 4
-    \* 限制任期数
-    /\ \A i \in Server : currentTerm[i] <= 4
-    \* 限制消息数量
-    /\ Cardinality(DOMAIN messages) <= 10
+CONSTRAINT StateConstraint
 
 \* 服务器对称性
 SYMMETRY ServerSymmetry
