--- a/TLA+/KVS-Raft/KVSRaft.cfg
+++ b/TLA+/KVS-Raft/KVSRaft.cfg
@@ -1,8 +1,8 @@
 SPECIFICATION Spec
 
 CONSTANTS 
-    Server = {s1, s2, s3}
-    Value = {v1, v2}
+    Server = {s1, s2}
+    Value = {v1}
     Follower = "follower"
     Candidate = "candidate" 
     Leader = "leader"
@@ -13,9 +13,3 @@ CONSTANTS
     AppendEntriesResponse = "AppendEntriesResponse"
 
 INVARIANT Safety
-
-\* 状态约束：限制模型大小以提高验证效率
-CONSTRAINT StateConstraint
-
-\* 服务器对称性
-SYMMETRY ServerSymmetry
