--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ test
 result
 charts
 TLA+/KVS-Raft/states
+TLA+/miniKVSRaft/states
+benchmark/testRocksDB-kvs
+kvstore/FlexSync/data
+kvstore/FlexSync/other
