chore: add some results folders

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ benchmark/testRocksDB-kvs
 kvstore/FlexSync/data
 kvstore/FlexSync/other
 benchmark/scan_pro/results
+benchmark/zipf_read/results
+ycsb/results
